--- a/cutdown_timeout.html
+++ b/cutdown_timeout.html
@@ -33,8 +33,9 @@
 
 <script src="./angular-1.0.1.min.js" type="text/javascript"></script>
 <script type="text/javascript">
+
 angular.module('countDown',[])
-    .controller('ControllerA',['$scope','$rootScope',function  ($scope,$rootScope) {
+    .controller('ControllerA',['$scope','$rootScope','$timeout',function  ($scope,$rootScope,$timeout) {
         var countTime=new Date(2015,6,1)*1-new Date(2015,5,1)*1;
         var getTime=function  (countTime) {
             return{
@@ -43,19 +44,33 @@ angular.module('countDown',[])
                 tm:Math.floor(countTime%3600/60),
                 ts:Math.floor(countTime%60)
             }
-        }
-        var handle = setInterval(function  () {
+        };//;
+
+        (function tick() {
             countTime--;
             var t=getTime(countTime);
             $scope.sec=t.ts;
             $scope.min=t.tm;
             $scope.houer=t.th;
-            $scope.day=t.td;      
+            $scope.day=t.td; 
             if(countTime==0){
-                clearInterval(handle);
-            }              
-            $scope.$apply();
-        },1000)      
+                alert(111)
+                return;
+            };
+            $timeout(tick, 1000);
+        })();        
+        // var handle = setInterval(function  () {
+        //     countTime--;
+        //     var t=getTime(countTime);
+        //     $scope.sec=t.ts;
+        //     $scope.min=t.tm;
+        //     $scope.houer=t.th;
+        //     $scope.day=t.td;      
+        //     if(countTime==0){
+        //         clearInterval(handle);
+        //     }              
+        //     $scope.$apply();
+        // },1000)      
     }])
 
 </script>
